# youtube-music-desktop-app

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
icons/: icon.icns
src/: discord_presence.rs  main.rs  script.js  song.rs
