[package]
name = "youtube-music-desktop-app"
version = "1.0.0"
description = "An unofficial youtube music desktop application"
authors = ["theseikoda"]
repository = "https://github.com/theseikoda/youtube-music-desktop-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = [
    "objc-exception",
    "wry",
    "shell-open",
], default-features = false }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
discord-rich-presence = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
codegen-units = 1
opt-level = "s"
lto = "fat"
